bin/tests/errors/sema/sema_err_retval_unknown_return_type.swg
#global fileprivate

func unresolved() => cast(retval) 1 // swc-expected-error {{sema_err_retval_unknown_return_type}}
